--- a/prometheus/configmap/configmap.yaml
+++ b/prometheus/configmap/configmap.yaml
@@ -26,6 +26,7 @@ data:
 
     scrape_configs:
       - job_name: 'node-exporter'
+        scrape_interval: 120s
         kubernetes_sd_configs:
           - role: endpoints
         relabel_configs:
@@ -34,7 +35,7 @@ data:
           action: keep
       
       - job_name: 'kubernetes-apiservers'
-
+        scrape_interval: 120s
         kubernetes_sd_configs:
         - role: endpoints
         scheme: https
@@ -49,7 +50,7 @@ data:
           regex: default;kubernetes;https
 
       - job_name: 'kubernetes-nodes'
-
+        scrape_interval: 120s
         scheme: https
 
         tls_config:
@@ -70,7 +71,7 @@ data:
           replacement: /api/v1/nodes/${1}/proxy/metrics     
       
       - job_name: 'kubernetes-pods'
-
+        scrape_interval: 120s
         kubernetes_sd_configs:
         - role: pod
 
@@ -97,11 +98,12 @@ data:
           target_label: kubernetes_pod_name
       
       - job_name: 'kube-state-metrics'
+        scrape_interval: 120s
         static_configs:
           - targets: ['kube-state-metrics.kube-system.svc.cluster.local:8080']
 
       - job_name: 'kubernetes-cadvisor'
-
+        scrape_interval: 120s
         scheme: https
 
         tls_config:
@@ -122,7 +124,7 @@ data:
           replacement: /api/v1/nodes/${1}/proxy/metrics/cadvisor
       
       - job_name: 'kubernetes-service-endpoints'
-
+        scrape_interval: 120s
         kubernetes_sd_configs:
         - role: endpoints
 
