--- a/argocd/service/argocd-rescue.yaml
+++ b/argocd/service/argocd-rescue.yaml
@@ -6,8 +6,7 @@ metadata:
 spec:
   selector:
     app.kubernetes.io/name: argocd-server
-  externalIPs:
-    - 192.168.100.20
+  loadBalancerIP: 192.168.100.20
   ports:
     - name: http
       port: 80
