--- a/prometheus/configmap/configmap-shortterm.yaml
+++ b/prometheus/configmap/configmap-shortterm.yaml
@@ -1,9 +1,9 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: prometheus-server-conf
+  name: prometheus-server-conf-shortterm
   labels:
-    name: prometheus-server-conf
+    name: prometheus-server-conf-shortterm
   namespace: tools
 data:
   prometheus.rules: |-
