--- a/prometheus/deployment.yaml
+++ b/prometheus/deployment.yaml
@@ -1,23 +1,23 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: prometheus-deployment
+  name: prometheus
   namespace: tools
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app.kubernetes.io/name: prometheus-server
+      app.kubernetes.io/name: prometheus-shortterm
   template:
     metadata:
       labels:
-        app.kubernetes.io/name: prometheus-server
+        app.kubernetes.io/name: prometheus-shortterm
     spec:
       containers:
-        - name: prometheus-server
+        - name: prometheus-shortterm
           image: prom/prometheus:v2.40.1
           args:
-            - "--storage.tsdb.retention.time=180d"
+            - "--storage.tsdb.retention.time=2h"
             - "--config.file=/etc/prometheus/prometheus.yml"
             - "--storage.tsdb.path=/prometheus/"
           ports:
@@ -48,7 +48,7 @@ spec:
         - name: prometheus-config-volume
           configMap:
             defaultMode: 420
-            name: prometheus-server-conf
+            name: prometheus-server-conf-shortterm
         - name: prometheus-storage-volume
           emptyDir:
             sizeLimit: 500Mi
