--- a/prometheus/kustomization.yaml
+++ b/prometheus/kustomization.yaml
@@ -2,6 +2,6 @@ resources:
  - deployment.yaml
  - crb/crb.yaml
 # - pvc/pvc.yaml
- - configmap/configmap.yaml
+ - configmap/configmap-shortterm.yaml
  - service/service.yaml
  - service/ingressroute.yaml
