--- a/prometheus/service/service.yaml
+++ b/prometheus/service/service.yaml
@@ -4,7 +4,7 @@ metadata:
   name: prometheus-svc
 spec:
   selector:
-    app.kubernetes.io/name: prometheus-server
+    app.kubernetes.io/name: prometheus-shortterm
   ports:
   - name: http
     port: 9090
