set namespace on cm

--- a/prometheus/kustomization.yaml
+++ b/prometheus/kustomization.yaml
@@ -8,5 +8,6 @@ resources:
 
 configMapGenerator:
   - name: prometheus-server-conf-shortterm
+    namespace: tools
     files:
     - configmap/prometheus-shortterm.yaml
