--- a/monitoring/kustomization.yaml
+++ b/monitoring/kustomization.yaml
@@ -1,6 +1,6 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
-namespace: monitoring
+namespace: tools
 resources:
   - ingress/middleware.yaml
 
