--- a/monitoring/ingress/middleware.yaml
+++ b/monitoring/ingress/middleware.yaml
@@ -2,7 +2,7 @@ apiVersion: traefik.containo.us/v1alpha1
 kind: Middleware
 metadata:
   name: httpsredirect
-  namespace: monitoring
+  namespace: tools
 spec:
   redirectScheme:
     scheme: https
