--- a/prometheus/deployment.yaml
+++ b/prometheus/deployment.yaml
@@ -1,7 +1,7 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: prometheus
+  name: prometheus-shortterm
   namespace: tools
 spec:
   replicas: 1
@@ -53,4 +53,61 @@ spec:
         - name: prometheus-storage-volume
           emptyDir:
             sizeLimit: 500Mi
+  revisionHistoryLimit: 1
+---
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: prometheus
+  namespace: tools
+spec:
+  replicas: 1
+  selector:
+    matchLabels:
+      app.kubernetes.io/name: prometheus
+  template:
+    metadata:
+      labels:
+        app.kubernetes.io/name: prometheus
+    spec:
+      containers:
+        - name: prometheus
+          image: prom/prometheus:v2.40.1
+          args:
+            - "--storage.tsdb.retention.time=180d"
+            - "--config.file=/etc/prometheus/prometheus.yml"
+            - "--storage.tsdb.path=/prometheus/"
+          ports:
+            - containerPort: 9090
+          resources:
+            requests:
+              cpu: 500m
+              memory: 500M
+            limits:
+              cpu: 1
+              memory: 1Gi
+          volumeMounts:
+            - name: prometheus-config-volume
+              mountPath: /etc/prometheus/prometheus.yml
+              subPath: prometheus.yaml
+            - name: prometheus-storage-volume
+              mountPath: /prometheus/
+      initContainers:
+      - name: change-ownership-container
+        image: busybox
+        command: ["/bin/chmod","-R","777", "/prometheus/"]
+        securityContext:
+          runAsUser: 0
+          privileged: true
+        volumeMounts:
+        - name: prometheus-storage-volume
+          mountPath: /prometheus/
+      volumes:
+        - name: prometheus-config-volume
+          configMap:
+            defaultMode: 420
+            name: prometheus-server-conf
+        - name: prometheus-storage-volume
+          persistentVolumeClaim:
+            claimName: prometheus-data-pvc
   revisionHistoryLimit: 1
