--- a/prometheus/service/ingressroute.yaml
+++ b/prometheus/service/ingressroute.yaml
@@ -1,6 +1,42 @@
 apiVersion: traefik.containo.us/v1alpha1
 kind: IngressRoute
 metadata:
+  name: prometheus-short-http
+  namespace: tools
+spec:
+  entryPoints:
+    - web
+  routes:
+    - match: Host(`prometheus-short.k8s.lenin.nu`)
+      kind: Rule
+      middlewares:
+      - name: httpsredirect
+      services:
+      - name: prometheus-shortterm-svc
+        port: 9090
+        namespace: tools
+---
+apiVersion: traefik.containo.us/v1alpha1
+kind: IngressRoute
+metadata:
+  name: prometheus-short-https
+  namespace: tools
+spec:
+  entryPoints:
+    - websecure
+  tls:
+    secretName: 
+  routes:
+  - match: Host(`prometheus-short.k8s.lenin.nu`)
+    kind: Rule
+    services:
+    - name: prometheus-shortterm-svc
+      port: 9090
+      namespace: tools
+---
+apiVersion: traefik.containo.us/v1alpha1
+kind: IngressRoute
+metadata:
   name: prometheus-http
   namespace: tools
 spec:
