--- a/prometheus/service/service.yaml
+++ b/prometheus/service/service.yaml
@@ -1,10 +1,21 @@
 kind: Service
 apiVersion: v1
 metadata: 
-  name: prometheus-svc
+  name: prometheus-shortterm-svc
 spec:
   selector:
     app.kubernetes.io/name: prometheus-shortterm
+  ports:
+  - name: http
+    port: 9090
+---
+kind: Service
+apiVersion: v1
+metadata: 
+  name: prometheus-svc
+spec:
+  selector:
+    app.kubernetes.io/name: prometheus
   ports:
   - name: http
     port: 9090
