add ping exporter

--- a/monitoring/service/service.yaml
+++ b/monitoring/service/service.yaml
@@ -33,3 +33,15 @@ spec:
   ports:
     - name: http
       port: 9100
+---
+kind: Service
+apiVersion: v1
+metadata: 
+  name: ping-exporter-svc
+spec:
+  selector:
+    app.kubernetes.io/name: ping-exporter
+  type: ClusterIP
+  ports:
+    - name: http
+      port: 9427
