--- a/monitoring/kustomization.yaml
+++ b/monitoring/kustomization.yaml
@@ -2,7 +2,7 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 namespace: tools
 resources:
-  - ingress/middleware.yaml
+#  - ingress/middleware.yaml
 
   - deployment.yaml
   - service/service.yaml
