--- a/harbor-ingress/ingress/ingressroute.yaml
+++ b/harbor-ingress/ingress/ingressroute.yaml
@@ -10,18 +10,18 @@ spec:
   - match: Host(`harbor.k8s.lenin.nu`)
     kind: Rule
     services:
-    - name: harbor-harbor-portal
+    - name: harbor-portal
       namespace: harbor
       port: 80
   - match: Host(`harbor.k8s.lenin.nu`) && PathPrefix(`/api/`, `/service/`, `/v2/`, `/chartrepo/`, `/c/`)
     kind: Rule
     services:
-    - name: harbor-harbor-core
+    - name: harbor-core
       namespace: harbor
       port: 80
   - match: Host(`harbor-notary.k8s.lenin.nu`)
     kind: Rule
     services:
-    - name: harbor-harbor-notary-server
+    - name: harbor-notary-server
       namespace: harbor
       port: 4443
