--- a/harbor-ingress/ingress/ingressroute.yaml
+++ b/harbor-ingress/ingress/ingressroute.yaml
@@ -13,11 +13,11 @@ spec:
     services:
     - name: harbor-portal
       port: 80
-#  - match: Host(`harbor.k8s.lenin.nu`) && PathPrefix(`/api/`, `/service/`, `/v2/`, `/chartrepo/`, `/c/`)
-#    kind: Rule
-#    services:
-#    - name: harbor-core
-#      port: 80
+  - match: Host(`harbor.k8s.lenin.nu`) && PathPrefix(`/api/`, `/service/`, `/v2/`, `/chartrepo/`, `/c/`)
+    kind: Rule
+    services:
+    - name: harbor-core
+      port: 80
   - match: Host(`harbor-notary.k8s.lenin.nu`)
     kind: Rule
     services:
