try new helm declaration thingy

--- a/helm/traefik/Chart.yaml
+++ b/helm/traefik/Chart.yaml
@@ -1,8 +1,11 @@
-name: traefik
-apiVersion: v2
-version: 1.0.0
-dependencies: # A list of the chart requirements (optional)
-  - name: traefik
-    version: 10.24.0
-    appVersion: 2.9.4
-    repository: https://helm.traefik.io/traefik
+project: default
+source:
+  repoURL: 'https://traefik.github.io/charts'
+  targetRevision: 20.3.0
+  helm:
+    valueFiles:
+      - values.yaml
+  chart: traefik
+destination:
+  server: 'https://kubernetes.default.svc'
+  namespace: traefik
