--- a/helm/traefik/Chart.yaml
+++ b/helm/traefik/Chart.yaml
@@ -1,13 +1,27 @@
 apiVersion: v2
 name: traefik
-project: default
-source:
-  repoURL: 'https://traefik.github.io/charts'
-  targetRevision: 20.3.0
-  helm:
-    valueFiles:
-      - values.yaml
-  chart: traefik
-destination:
-  server: 'https://kubernetes.default.svc'
-  namespace: traefik
+description: A Traefik based Kubernetes ingress controller
+type: application
+version: 20.3.0
+appVersion: v2.9.4
+keywords:
+  - traefik
+  - ingress
+home: https://traefik.io/
+sources:
+  - https://github.com/traefik/traefik
+  - https://github.com/traefik/traefik-helm-chart
+maintainers:
+  - name: emilevauge
+    email: emile@vauge.com
+  - name: dtomcej
+    email: daniel.tomcej@gmail.com
+  - name: ldez
+    email: ldez@traefik.io
+  - name: mloiseleur
+    email: michel.loiseleur@traefik.io
+  - name: charlie-haley
+    email: charlie.haley@traefik.io
+icon: https://raw.githubusercontent.com/traefik/traefik/v2.3/docs/content/assets/img/traefik.logo.png
+annotations:
+  artifacthub.io/changes: "- Adds support for namespace overrides in subchart use\n- Document recent changes in the README (#717)\n"
