--- a/helm/traefik/Chart.yaml
+++ b/helm/traefik/Chart.yaml
@@ -1,6 +1,6 @@
 name: traefik
 apiVersion: v2
-#version: 1.0.0
+version: 1.0.0
 dependencies: # A list of the chart requirements (optional)
   - name: traefik
     version: 20.3.0
