--- a/helm/traefik/values.yaml
+++ b/helm/traefik/values.yaml
@@ -551,7 +551,7 @@ service:
   # Additional entries here will be added to the service spec.
   # Cannot contain type, selector or ports entries.
   spec: {
-    # externalTrafficPolicy: Cluster
+    externalTrafficPolicy:  [local],
     loadBalancerIP: [192.168.100.22]
     # clusterIP: "2.3.4.5"
     }
