--- a/helm/traefik/values.yaml
+++ b/helm/traefik/values.yaml
@@ -551,8 +551,8 @@ service:
   # Additional entries here will be added to the service spec.
   # Cannot contain type, selector or ports entries.
   spec: {
-    externalTrafficPolicy:  [local],
-    loadBalancerIP: [192.168.100.22]
+    externalTrafficPolicy:  ["local"],
+    loadBalancerIP: ["192.168.100.22"]
     # clusterIP: "2.3.4.5"
     }
   loadBalancerSourceRanges: []
