--- a/helm/traefik/values.yaml
+++ b/helm/traefik/values.yaml
@@ -550,14 +550,13 @@ service:
   labels: {}
   # Additional entries here will be added to the service spec.
   # Cannot contain type, selector or ports entries.
-  spec: {
-    externalTrafficPolicy:  ["local"],
-    loadBalancerIP: ["192.168.100.22"]
+  spec: 
+    externalTrafficPolicy:  local
+    loadBalancerIP: 192.168.100.22
     # clusterIP: "2.3.4.5"
-    }
-  loadBalancerSourceRanges: []
-    # - 192.168.0.1/32
-    # - 172.16.0.0/16
+    
+  loadBalancerSourceRanges: 
+    - 192.168.100.30 - 192.168.100.40
   externalIPs: []
   ## One of SingleStack, PreferDualStack, or RequireDualStack.
   # ipFamilyPolicy: SingleStack
