--- a/helm/traefik/values.yaml
+++ b/helm/traefik/values.yaml
@@ -468,7 +468,8 @@ ports:
       # this is the name of a TLSOption definition
       options: ""
       certResolver: ""
-      domains: []
+      domains: 
+        - main: "*.k8s.lenin.nu"
       # - main: example.com
       #   sans:
       #     - foo.example.com
@@ -557,7 +558,8 @@ service:
     
   loadBalancerSourceRanges: 
     - 192.168.100.30 - 192.168.100.40
-  externalIPs: []
+  externalIPs: 
+   - 192.168.100.22
   ## One of SingleStack, PreferDualStack, or RequireDualStack.
   # ipFamilyPolicy: SingleStack
   ## List of IP families (e.g. IPv4 and/or IPv6).
