--- a/helm/traefik/values.yaml
+++ b/helm/traefik/values.yaml
@@ -552,14 +552,12 @@ service:
   # Additional entries here will be added to the service spec.
   # Cannot contain type, selector or ports entries.
   spec: 
-    externalTrafficPolicy:  local
-    loadBalancerIP: 192.168.100.22
+    externalTrafficPolicy:  cluster
+    externalIP: 192.168.100.22
     # clusterIP: "2.3.4.5"
     
-  loadBalancerSourceRanges: 
-    - 192.168.100.30 - 192.168.100.40
-  externalIPs: 
-   - 192.168.100.22
+  loadBalancerSourceRanges: {}
+  externalIPs: {}
   ## One of SingleStack, PreferDualStack, or RequireDualStack.
   # ipFamilyPolicy: SingleStack
   ## List of IP families (e.g. IPv4 and/or IPv6).
