--- a/helm/traefik/values.yaml
+++ b/helm/traefik/values.yaml
@@ -557,7 +557,7 @@ service:
     # externalTrafficPolicy: cluster
     loadBalancerIP: 192.168.100.22
     # clusterIP: "2.3.4.5"
-    
+    externalIPs: 192.168.100.22
   loadBalancerSourceRanges: {}
   externalIPs: {}
   ## One of SingleStack, PreferDualStack, or RequireDualStack.
