--- a/helm/traefik/values.yaml
+++ b/helm/traefik/values.yaml
@@ -543,6 +543,7 @@ service:
   ## When set to false, it will create two Service, one for TCP and one for UDP.
   single: true
   type: LoadBalancer
+  loadBalancerIP: 192.168.100.22
   # Additional annotations applied to both TCP and UDP services (e.g. for cloud provider specific config)
   annotations: {}
   # Additional annotations for TCP service only
@@ -557,7 +558,6 @@ service:
     # externalTrafficPolicy: cluster
     loadBalancerIP: 192.168.100.22
     # clusterIP: "2.3.4.5"
-    externalIPs: 192.168.100.22
   loadBalancerSourceRanges: {}
   externalIPs: {}
   ## One of SingleStack, PreferDualStack, or RequireDualStack.
