--- a/helm/traefik/values.yaml
+++ b/helm/traefik/values.yaml
@@ -545,6 +545,9 @@ service:
   type: LoadBalancer
   allocateLoadBalancerNodePorts: false
   loadBalancerIP: 192.168.100.22
+  externalIPs: 192.168.100.22
+  loadBalancerSourceRanges: 
+    - 192.168.100.22
   # Additional annotations applied to both TCP and UDP services (e.g. for cloud provider specific config)
   annotations: {}
   # Additional annotations for TCP service only
@@ -559,8 +562,8 @@ service:
     # externalTrafficPolicy: cluster
     loadBalancerIP: 192.168.100.22
     # clusterIP: "2.3.4.5"
-  loadBalancerSourceRanges: {}
-  externalIPs: {}
+  #loadBalancerSourceRanges: {}
+  #externalIPs: {}
   ## One of SingleStack, PreferDualStack, or RequireDualStack.
   # ipFamilyPolicy: SingleStack
   ## List of IP families (e.g. IPv4 and/or IPv6).
