--- a/metallb/config/pool.yaml
+++ b/metallb/config/pool.yaml
@@ -5,4 +5,14 @@ metadata:
   namespace: metallb-system
 spec:
   addresses:
-  - 192.168.100.20-192.168.100.30
+  - 192.168.100.20-192.168.100.22
+  autoAssign: false
+---
+apiVersion: metallb.io/v1beta1
+kind: IPAddressPool
+metadata:
+  name: pool02
+  namespace: metallb-system
+spec:
+  addresses:
+  - 192.168.100.23-192.168.100.30
