--- a/cert-manager/certificates/self-signed/certificate.yaml
+++ b/cert-manager/certificates/self-signed/certificate.yaml
@@ -4,7 +4,7 @@ metadata:
   name: selfsigned-cert
 spec:
   dnsNames:
-    - *.k8s.lenin.nu
+    - "*.k8s.lenin.nu"
   secretName: selfsigned-cert-tls
   issuerRef:
     name: test-selfsigned
