--- a/cert-manager/certificates/self-signed/certificate.yaml
+++ b/cert-manager/certificates/self-signed/certificate.yaml
@@ -7,6 +7,7 @@ spec:
     - "k8s.lenin.nu"
     - "*.k8s.lenin.nu"
   secretName: selfsigned-cert-secret
+  namespace: traefik
   issuerRef:
     name: test-selfsigned
   privateKey:
