disable unused cert

--- a/cert-manager/kustomization.yaml
+++ b/cert-manager/kustomization.yaml
@@ -3,7 +3,7 @@ kind: Kustomization
 resources:
   - https://github.com/cert-manager/cert-manager/releases/download/v1.10.0/cert-manager.yaml
   - certificates/self-signed/issuer.yaml
-  - certificates/self-signed/certificate.yaml
+#  - certificates/self-signed/certificate.yaml
 
 generatorOptions:
   disableNameSuffixHash: true
