--- a/monitoring/deployment.yaml
+++ b/monitoring/deployment.yaml
@@ -128,3 +128,47 @@ spec:
         configMap:
           name: ping-exporter-conf
   revisionHistoryLimit: 1
+---
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: script-exporter
+spec:
+  replicas: 1
+  selector:
+    matchLabels:
+      app.kubernetes.io/name: script-exporter
+  template:
+    metadata:
+      labels:
+        app.kubernetes.io/name: script-exporter
+    spec:
+      containers:
+      - name: script-exporter
+        image: ricoberger/script_exporter:master
+        ports:
+        - name: http
+          containerPort: 9469
+        volumeMounts:
+        - name: script-exporter-conf
+          mountPath: /bin/config/config.yml
+          subPath: config.yml
+        - name: script-exporter-script1
+          mountPath: /bin/config/script1.sh
+          subPath: script1.sh
+        resources: 
+          limits:
+            cpu: 100m
+            memory: 50Mi
+          requests:
+            cpu: 100m
+            memory: 50Mi
+      restartPolicy: Always
+      volumes:
+      - name: script-exporter-conf
+        configMap:
+          name: script_exporter_config
+      - name: script-exporter-script1
+        configMap:
+          name: script_exporter_script1
+  revisionHistoryLimit: 1
