--- a/monitoring/deployment.yaml
+++ b/monitoring/deployment.yaml
@@ -175,3 +175,36 @@ spec:
         configMap:
           name: script-exporter-script1
   revisionHistoryLimit: 1
+---
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: pihole-exporter
+spec:
+  replicas: 1
+  selector:
+    matchLabels:
+      app.kubernetes.io/name: pihole-exporter
+  template:
+    metadata:
+      labels:
+        app.kubernetes.io/name: pihole-exporter
+    spec:
+      containers:
+      - name: pihole-exporter
+        image: ekofr/pihole-exporter:v0.3.0
+        ports:
+        - name: http
+          containerPort: 9617
+        envFrom:
+        - configMapRef:
+            name: pihole-exporter-env
+        resources: 
+          limits:
+            cpu: 100m
+            memory: 50Mi
+          requests:
+            cpu: 100m
+            memory: 50Mi
+      restartPolicy: Always
+  revisionHistoryLimit: 1
