--- a/cert-manager/namespace/traefik/certificate.yaml
+++ b/cert-manager/namespace/traefik/certificate.yaml
@@ -4,9 +4,15 @@ metadata:
   name: selfsigned-cert
 spec:
   dnsNames:
-    - "k8s.lenin.nu"
-    - "*.k8s.lenin.nu"
-  secretName: selfsigned-cert-secret
+    - argocd.k8s.lenin.nu
+    - yopass.k8s.lenin.nu
+    - prometheus.k8s.lenin.nu
+    - prometheus-short.k8s.lenin.nu
+    - grafana.k8s.lenin.nu
+    - ceph.k8s.lenin.nu
+    - harbor.k8s.lenin.nu
+    - harbor-notary.k8s.lenin.nu
+  secretName: k8s-lenin-nu-cert
   issuerRef:
     name: test-selfsigned
   privateKey:
