--- a/yopass/yopass/yopass-ingress.yaml
+++ b/yopass/yopass/yopass-ingress.yaml
@@ -11,6 +11,7 @@ spec:
       kind: Rule
       middlewares:
       - name: httpsredirect
+      - name: yopass-ipwhitelist
       services:
       - name: yopass-svc
         port: 1337
@@ -29,6 +30,8 @@ spec:
   routes:
   - match: Host(`yopass.k8s.lenin.nu`)
     kind: Rule
+    middlewares:
+    - name: yopass-ipwhitelist
     services:
     - name: yopass-svc
       port: 1337
