--- a/metallb/kustomization.yaml
+++ b/metallb/kustomization.yaml
@@ -5,5 +5,6 @@ resources:
   - github.com/metallb/metallb/config/native?ref=v0.13.7
 
   - config/pool.yaml
+  - config/advertisement.yaml
 generatorOptions:
   disableNameSuffixHash: true
