--- a/metallb/config/advertisement.yaml
+++ b/metallb/config/advertisement.yaml
@@ -1,7 +1,7 @@
 apiVersion: metallb.io/v1beta1
 kind: L2Advertisement
 metadata:
-  name: example
+  name: AdvertiseL2
   namespace: metallb-system
 spec:
   ipAddressPools:
