add pool01 to advertisement

--- a/metallb/config/advertisement.yaml
+++ b/metallb/config/advertisement.yaml
@@ -5,6 +5,6 @@ metadata:
   namespace: metallb-system
 spec:
   ipAddressPools:
-#  - pool01-argocd
+  - pool01-argocd
   - pool02-traefik
   - pool03
