--- a/metallb/config/advertisement.yaml
+++ b/metallb/config/advertisement.yaml
@@ -15,8 +15,9 @@ metadata:
 spec:
   ipAddressPools:
   - pool02-traefik
-  selector:
-  app.kubernetes.io/name: traefik
+  nodeSelectors:
+  - matchLabels:
+    app.kubernetes.io/name: traefik
 ---
 apiVersion: metallb.io/v1beta1
 kind: L2Advertisement
