--- a/metallb/config/advertisement.yaml
+++ b/metallb/config/advertisement.yaml
@@ -16,8 +16,8 @@ spec:
   ipAddressPools:
   - pool02-traefik
   nodeSelectors:
-    matchLabels:
-      app.kubernetes.io/name: traefik
+  - matchLabels:
+    app.kubernetes.io/name: traefik
 ---
 apiVersion: metallb.io/v1beta1
 kind: L2Advertisement
