--- a/metallb/config/advertisement.yaml
+++ b/metallb/config/advertisement.yaml
@@ -17,7 +17,7 @@ spec:
   - pool02-traefik
   nodeSelectors:
   - matchLabels:
-    app.kubernetes.io/name: traefik
+    - app.kubernetes.io/name: traefik
 ---
 apiVersion: metallb.io/v1beta1
 kind: L2Advertisement
