try it on traefik as well

--- a/metallb/config/advertisement.yaml
+++ b/metallb/config/advertisement.yaml
@@ -15,6 +15,13 @@ metadata:
 spec:
   ipAddressPools:
   - pool02-traefik
+  nodeSelectors:
+  - matchLabels:
+      kubernetes.io/hostname: k8s-worker-01
+  - matchLabels:
+      kubernetes.io/hostname: k8s-worker-02
+  - matchLabels:
+      kubernetes.io/hostname: k8s-worker-03
 ---
 apiVersion: metallb.io/v1beta1
 kind: L2Advertisement
