--- a/metallb/config/advertisement.yaml
+++ b/metallb/config/advertisement.yaml
@@ -33,7 +33,8 @@ spec:
   - pool03
   nodeSelectors:
   - matchLabels:
-      kubernetes.io/hostname: k8s-worker-01
+      app.kubernetes.io/name: traefik
+#      kubernetes.io/hostname: k8s-worker-01
   - matchLabels:
       kubernetes.io/hostname: k8s-worker-02
   - matchLabels:
