limit argocd ip pool to workers only

--- a/metallb/config/advertisement.yaml
+++ b/metallb/config/advertisement.yaml
@@ -8,7 +8,11 @@ spec:
   - pool01-argocd
   nodeSelectors:
   - matchLabels:
-      app.kubernetes.io/name: argocd-server
+      kubernetes.io/hostname: k8s-worker-01
+  - matchLabels:
+      kubernetes.io/hostname: k8s-worker-02
+  - matchLabels:
+      kubernetes.io/hostname: k8s-worker-03
 ---
 apiVersion: metallb.io/v1beta1
 kind: L2Advertisement
