once more onto the breach

--- a/metallb/config/advertisement.yaml
+++ b/metallb/config/advertisement.yaml
@@ -23,7 +23,7 @@ spec:
   ipAddressPools:
   - pool02-traefik
   nodeSelectors:
-    requiredDuringSchedulingIgnoredDuringExecution: 
+    - requiredDuringSchedulingIgnoredDuringExecution: 
       nodeSelectorTerms:
         matchExpressions:
         - key: app.kubernetes.io/name
