--- a/metallb/config/advertisement.yaml
+++ b/metallb/config/advertisement.yaml
@@ -23,13 +23,13 @@ spec:
   ipAddressPools:
   - pool02-traefik
   nodeSelectors:
-    - requiredDuringSchedulingIgnoredDuringExecution: 
-      - nodeSelectorTerms:
-        matchExpressions:
-        - key: app.kubernetes.io/name
-          operator: in
-          values:
-          - traefik
+    requiredDuringSchedulingIgnoredDuringExecution: 
+    - nodeSelectorTerms:
+      matchExpressions:
+      - key: app.kubernetes.io/name
+        operator: in
+        values:
+        - traefik
 ---
 apiVersion: metallb.io/v1beta1
 kind: L2Advertisement
