--- a/metallb/config/advertisement.yaml
+++ b/metallb/config/advertisement.yaml
@@ -23,11 +23,12 @@ spec:
   ipAddressPools:
   - pool02-traefik
   nodeSelectors:
-  - matchExpressions:
-    - key: app.kubernetes.io/name
-      operator: In
-      values:
-      - "traefik"
+  - matchLabels:
+      kubernetes.io/hostname: k8s-worker-01
+  - matchLabels:
+      kubernetes.io/hostname: k8s-worker-02
+  - matchLabels:
+      kubernetes.io/hostname: k8s-worker-03
 ---
 apiVersion: metallb.io/v1beta1
 kind: L2Advertisement
