limit metallb to worker nodes..

--- a/metallb/kustomization.yaml
+++ b/metallb/kustomization.yaml
@@ -6,5 +6,6 @@ resources:
 
   - config/pool.yaml
   - config/advertisement.yaml
+  - config/metallb.yaml
 generatorOptions:
   disableNameSuffixHash: true
