--- a/argocd/service/argocd-rescue.yaml
+++ b/argocd/service/argocd-rescue.yaml
@@ -3,6 +3,8 @@ kind: Service
 metadata:
   name: argocd-server-2
   namespace: argocd
+  annotations:
+    metallb.universe.tf/address-pool: pool01-argocd
 spec:
   selector:
     app.kubernetes.io/name: argocd-server
