--- a/metallb/kustomization.yaml
+++ b/metallb/kustomization.yaml
@@ -5,6 +5,7 @@ resources:
   - github.com/metallb/metallb/config/native?ref=v0.13.7
 
   - config/pool.yaml
-  - config/advertisement.yaml
+  - config/l2advertisement.yaml
+  - config/bgpadvertisement.yaml
 generatorOptions:
   disableNameSuffixHash: true
