--- a/argocd/kustomization.yaml
+++ b/argocd/kustomization.yaml
@@ -4,6 +4,7 @@ namespace: argocd
 resources:
   - https://raw.githubusercontent.com/argoproj/argo-cd/v2.5.2/manifests/install.yaml
   - service/argocd-rescue.yaml
+  - service/argocd-rescue2.yaml
   - ingress/argocd-ingress.yaml
   - ingress/middleware.yaml
 patchesStrategicMerge:
