--- a/argocd/service/argocd-rescue2.yaml
+++ b/argocd/service/argocd-rescue2.yaml
@@ -8,6 +8,7 @@ metadata:
 spec:
   selector:
     app.kubernetes.io/name: argocd-server
+  externalTrafficPolicy: Local
   ports:
     - name: http
       port: 80
