add node selectors again

--- a/metallb/config/bgppeer.yaml
+++ b/metallb/config/bgppeer.yaml
@@ -7,3 +7,8 @@ spec:
   myASN: 64500
   peerASN: 65000
   peerAddress: 192.168.100.1
+  nodeSelectors:
+  - matchExpressions:
+    - key: kubernetes.io/hostname
+      operator: In
+      values: [k8s-worker-01, k8s-worker-02, k8s-worker-03]
