--- a/prometheus/deployment.yaml
+++ b/prometheus/deployment.yaml
@@ -129,8 +129,8 @@ spec:
       containers:
         - name: prometheus-configcheck
           image: alpine:3.17.0
-          command: ["bash"]
-          args: ["-c", "chmod +x /root/check.sh; ; apk --no-cache add curl; while true; do /root/check.sh /root/prometheus.yml https://prometheus.k8s.lenin.nu/-/reload; sleep 60; done "]
+          command: ["/bin/sh"]
+          args: ["-c", "chmod +x /root/check.sh; ; apk --no-cache add curl bash; while true; do /root/check.sh /root/prometheus.yml https://prometheus.k8s.lenin.nu/-/reload; sleep 60; done "]
           resources:
             requests:
               cpu: 500m
