--- a/prometheus/deployment.yaml
+++ b/prometheus/deployment.yaml
@@ -130,7 +130,7 @@ spec:
         - name: prometheus-configcheck
           image: alpine:3.17.0
           command: ["/bin/sh"]
-          args: ["-c", "chmod +x /root/check.sh; apk --no-cache add curl bash; while true; do /root/check.sh /root/prometheus.yml https://prometheus.k8s.lenin.nu/-/reload; sleep 60; done "]
+          args: ["-c", "chmod +x /root/check.sh; apk --no-cache add curl bash; while true; do /home/check.sh /home/prometheus.yml https://prometheus.k8s.lenin.nu/-/reload; sleep 60; done "]
           resources:
             requests:
               cpu: 500m
@@ -140,10 +140,10 @@ spec:
               memory: 1Gi
           volumeMounts:
             - name: prometheus-config-volume
-              mountPath: /root/prometheus.yml
+              mountPath: /home/prometheus.yml
               subPath: prometheus.yaml
             - name: prometheus-conf-checker
-              mountPath: /root/check.sh
+              mountPath: /home/check.sh
               subPath: check.sh
       volumes:
         - name: prometheus-config-volume
